# supplychain-pulse-dataflow

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  create_tables.sql  docker-compose.yaml  mypy.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 453d3b18f6fc_init_schema.py  94d692fb3734_init.py
src/scpulse/: main.py  pipeline.py
src/scpulse/api/dependencies/: auth.py
src/scpulse/api/routes/: auth.py  health.py  inventory.py  orders.py  suppliers.py  users.py
src/scpulse/api/schemas/: schemas.py  users.py
src/scpulse/core/: security.py
src/scpulse/etl/: bronze_to_silver.py  ingest_stream.py  silver_to_gold.py
src/scpulse/pulseboard_visualization/: app.py  config.toml
src/scpulse/storage/: crud.py  models.py  postgres.py  users_crud.py
src/scpulse/storage/models/: entities.py  users.py
src/scripts/: factories.py  simulate_suppliers.py
tests/: test_elt_silver.py  test_etl_gold.py  test_factories.py  test_sample.py
