[project]
name = "data-market-etl"
version = "1"
description = "Projeto para aprofudamento em engenharia de dados e backend."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
dependencies = [
    "fastapi (>=0.116.2,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "polars (>=1.33.1,<2.0.0)",
    "duckdb (>=1.4.0,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "prefect (>=3.4.18,<4.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "faker (>=37.8.0,<38.0.0)"
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.13.0,<0.14.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "mypy (>=1.18.1,<2.0.0)"
]


[tool.taskipy.tasks]
lint = "ruff check ."
format = "ruff format ."
test = "pytest tests/"
pre_test = "task lint"


[tool.ruff]
line-length = 79
target-version = "py312"
include = ["src", "tests"]
fix = true
show-fixes = true
